--- a/app/src/main/res/layout/activity_search_ride.xml
+++ b/app/src/main/res/layout/activity_search_ride.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".activities.CreateRide">
+    tools:context=".activities.SearchRide">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_create_ride" />
+    <include layout="@layout/content_search_ride" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
