--- a/app/src/main/res/layout/content_create_ride.xml
+++ b/app/src/main/res/layout/content_create_ride.xml
@@ -19,7 +19,6 @@
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:inputType="date"
         android:hint="Date"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/createRide_date"
@@ -31,7 +30,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:inputType="numberSigned"
-        android:hint="Sits available"
+        android:hint="Seats available"
         android:id="@+id/createRide_sits"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_marginTop="20dp"
@@ -50,18 +49,6 @@
         android:layout_marginTop="20dp" />
 
 
-    <EditText
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:inputType="time"
-        android:hint="Time"
-        android:id="@+id/createRide_time"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_below="@+id/createRide_location"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"/>
-
     <Button
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -69,7 +56,7 @@
         android:onClick="onCreateButtonRideClicked"
         android:id="@+id/button3"
         android:background="@drawable/custom_button"
-        android:layout_below="@+id/createRide_time"
+        android:layout_below="@+id/createRide_location"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="49dp" />
 
