--- a/app/src/main/res/layout/content_create_ride.xml
+++ b/app/src/main/res/layout/content_create_ride.xml
@@ -16,15 +16,24 @@
     <!--android:checked="false"-->
     <!--android:checkMark="@drawable/checked"-->
 
+
     <EditText
-        android:layout_width="fill_parent"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:hint="Date"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/createRide_time"
+        android:layout_alignTop="@+id/createRide_date"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+    <EditText
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:text="Select Date"
         android:id="@+id/createRide_date"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="59dp" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_alignRight="@+id/createRide_time"
+        android:layout_alignEnd="@+id/button3" />
 
     <EditText
         android:layout_width="fill_parent"
@@ -34,7 +43,7 @@
         android:id="@+id/createRide_sits"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_marginTop="20dp"
-        android:layout_below="@+id/createRide_date"
+        android:layout_below="@+id/createRide_time"
         android:layout_centerHorizontal="true" />
 
     <AutoCompleteTextView
