--- a/app/src/main/res/layout/content_search_ride.xml
+++ b/app/src/main/res/layout/content_search_ride.xml
@@ -16,7 +16,7 @@
     <EditText
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:hint="Date"
+        android:hint="Select time"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/createSearch_time"
         android:layout_alignTop="@+id/createSearch_date"
